--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Stylish Portfolio - Start Bootstrap Template</title>
+  <title>Soojin-Portfolio</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -32,7 +32,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="js-scroll-trigger" href="#page-top">soojin</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -47,32 +47,31 @@
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Contact</a>
+        <a class="js-scroll-trigger" href="#contact">Hire Me</a>
       </li>
     </ul>
   </nav>
 
   <!-- Header -->
-  <header class="masthead d-flex">
+  <!-- <header class="masthead d-flex">
     <div class="container text-center my-auto">
-      <h1 class="mb-1">Soojin's Portfolio</h1>
+      <h1 class="mb-1">PORTFOLIO</h1>
       <h3 class="mb-5">
-        <em>블록체인 마스터를 꿈꾸는 이수진 포트폴리오</em>
+        <em> 함께 하고싶은 사람, 소통왕을 꿈꾸는 이수진 입니다.</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
     <div class="overlay"></div>
-  </header>
+  </header> -->
 
   <!-- About -->
   <section class="content-section bg-light" id="about">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-          <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-            <a href="https://unsplash.com/">Unsplash</a>!</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+          <h2>PORTFOLIO</h2>
+          <p class="lead mb-5">함께하고싶은사람, 소통하는 기획자 이수진입니다 </p>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What I Do</a>
         </div>
       </div>
     </div>
@@ -83,52 +82,54 @@
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">Services</h3>
-        <h2 class="mb-5">What We Offer</h2>
+        <h2 class="mb-5">What I Do</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-          <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-screen-smartphone"></i>
-          </span>
-          <h4>
-            <strong>Responsive</strong>
-          </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
-        </div>
+            <span class="service-icon rounded-circle mx-auto mb-3">
+              <i class="fas fa-link"></i>
+            </span>
+            <h4>
+              <strong>BlockChain</strong>
+            </h4>
+            <p class="text-faded mb-0">블록체인전문가양성과정 수료</p>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <span class="service-icon rounded-circle mx-auto mb-3">
+                <i class="fas fa-laptop-code"></i>
+            </span>
+            <h4>
+              <strong>JavaScript, HTML</strong>
+            </h4>
+            <p class="text-faded mb-0">개발 꿈나무</p>
+          </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-pencil"></i>
+            <i class="far fa-comments"></i>
           </span>
           <h4>
-            <strong>Redesigned</strong>
+            <strong>Communication</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">긍정적사고방식의 소통왕</p>
         </div>
+
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-like"></i>
+            <i class="fas fa-car"></i>
           </span>
           <h4>
-            <strong>Favorited</strong>
+            <strong>BEST DRIVER</strong>
           </h4>
-          <p class="text-faded mb-0">Millions of users
+          <p class="text-faded mb-0">운전면허 보유 (1종 보통)
             <i class="fas fa-heart"></i>
-            Start Bootstrap!</p>
-        </div>
-        <div class="col-lg-3 col-md-6">
-          <span class="service-icon rounded-circle mx-auto mb-3">
-            <i class="icon-mustache"></i>
-          </span>
-          <h4>
-            <strong>Question</strong>
-          </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+            무사고 경력 10년</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Callout -->
+  Callout
   <section class="callout">
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
@@ -150,8 +151,8 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Stationary</div>
-                <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                <div class="h2">집피스</div>
+                <p class="mb-0">예비창업자를 위한 빈집활용 사무실 임대 플랫폼 </p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -161,14 +162,14 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">Ice Cream</div>
-                <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                <div class="h2">Jelly</div>
+                <p class="mb-0">토큰 이코노미를 활용한 기부활동 플랫폼</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-6">
+        <!-- <div class="col-lg-6">
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
@@ -178,8 +179,8 @@
             </div>
             <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
           </a>
-        </div>
-        <div class="col-lg-6">
+        </div> -->
+        <!-- <div class="col-lg-6">
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
@@ -189,7 +190,7 @@
             </div>
             <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -209,7 +210,7 @@
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-facebook"></i>
+            <i class="far fa-envelope"></i>
           </a>
         </li>
         <li class="list-inline-item">
@@ -218,7 +219,7 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="#!">
+          <a class="social-link rounded-circle text-white" href="https://github.com/soo1121">
             <i class="icon-social-github"></i>
           </a>
         </li>
