--- a/index.html
+++ b/index.html
@@ -47,30 +47,30 @@
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#contact">Hire Me</a>
+        <a class="js-scroll-trigger" href="#contact">Contect Me</a>
       </li>
     </ul>
   </nav>
 
   <!-- Header -->
-  <!-- <header class="masthead d-flex">
+  <header class="masthead d-flex">
     <div class="container text-center my-auto">
       <h1 class="mb-1">PORTFOLIO</h1>
       <h3 class="mb-5">
-        <em> 함께 하고싶은 사람, 소통왕을 꿈꾸는 이수진 입니다.</em>
+        <em> 함께하고싶은사람, 소통하는 기획자 이수진입니다</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
     <div class="overlay"></div>
-  </header> -->
+  </header>
 
   <!-- About -->
   <section class="content-section bg-light" id="about">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h2>PORTFOLIO</h2>
-          <p class="lead mb-5">함께하고싶은사람, 소통하는 기획자 이수진입니다 </p>
+          <h2>ABOUT ME</h2>
+          <p class="lead mb-5"> 중국학과을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에도 적응하고 성장했습니다. </p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What I Do</a>
         </div>
       </div>
@@ -129,7 +129,6 @@
     </div>
   </section>
 
-  Callout
   <section class="callout">
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
@@ -143,7 +142,7 @@
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
-        <h3 class="text-secondary mb-0">Portfolio</h3>
+        <h3 class="text-secondary mb-0">PROJECTS</h3>
         <h2 class="mb-5">Recent Projects</h2>
       </div>
       <div class="row no-gutters">
