--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
         <em>your</em>
+        <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
         next website!</h2>
       <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/themes/stylish-portfolio/">Download Now!</a>
     </div>
@@ -147,7 +148,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" href="https://github.com/gmae199boy/2020_jeju_hackathon">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">집피스</div>
@@ -158,7 +159,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
+          <a class="portfolio-item" href="https://github.com/gmae199boy/jelly_project">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Jelly</div>
@@ -198,8 +199,8 @@
   <section class="content-section bg-primary text-white">
     <div class="container text-center">
       <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-      <a href="#!" class="btn btn-xl btn-light mr-4">Click Me!</a>
-      <a href="#!" class="btn btn-xl btn-dark">Look at Me!</a>
+      <a href="./resume.pdf" class="btn btn-xl btn-light mr-4">이력서보기</a>
+      <a href="https://github.com/soo1121" class="btn btn-xl btn-dark">GITHUB</a>
     </div>
   </section>
 
