--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
   <!-- About -->
   <section class="content-section bg-light" id="about">
+    <img class="img-fluid" src="img/photo.jpg" alt="">
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-10 mx-auto">
@@ -133,7 +134,6 @@
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
         <em>your</em>
-        <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
         next website!</h2>
       <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/themes/stylish-portfolio/">Download Now!</a>
     </div>
