--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">soojin</a>
+        <a class="js-scroll-trigger" href="#page-top">Soojin Portfolio</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#page-top">Home</a>
@@ -41,7 +41,7 @@
         <a class="js-scroll-trigger" href="#about">About</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
+        <a class="js-scroll-trigger" href="#services">What I Do</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -57,7 +57,7 @@
     <div class="container text-center my-auto">
       <h1 class="mb-1">PORTFOLIO</h1>
       <h3 class="mb-5">
-        <em> 함께하고싶은사람, 소통하는 기획자 이수진입니다</em>
+        <em> 함께 하고 싶은 사람, 소통하는 기획자 이수진입니다</em>
       </h3>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
     </div>
@@ -65,9 +65,37 @@
   </header>
 
   <!-- About -->
-  <section class="content-section bg-light" id="about">
-    <img class="img-fluid" src="img/photo.jpg" alt="">
+  <section class="about">
+    <div class="container">    
+            <div class="col-md-12 my-5 col-xs-12">
+                <h2>ABOUT ME</h2>
+            </div>
+        <div class="row">
+            <div class="col-lg-6 col-md-12 my-5 mb-3">
+                <img src="img/photo.jpg " width="350px" class="bg-primary"/>
+            </div>
+            <div class="col-lg-6 col-md-12  my-5">
+                <h3>이수진 </h3>
+                <p>1991.11.21 여 010-2970-6138</p>
+                <p>- 2020 제주 블록체인 해커톤 본상 수상</p>
+                <p>- 2020.05 - 2020.11 한국표준협회 블록체인 교육연구원</p> 
+                <p>  블록체인 비즈니스 청년혁신가 양성 과정 수료</p>
+                <p>  중국학을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에 도전하고 적응하며 성장했습니다.
+                    유연한 커뮤니케이션 능력으로 사람들과 소통하며 문제를 도출하고 해결하는 기획자가 될 것입니다.
+                </p>
+                <div class="container text-center">
+                    <a href="./resume.pdf" class="btn btn-xl btn-light mr-4">RESUME</a>
+                    <a href="https://github.com/soo1121" class="btn btn-xl btn-dark">GITHUB</a>
+                </div>
+            </div> 
+         </div>
+    </div>
+</section>
+  <!-- <section class="content-section bg-light" id="about">
     <div class="container text-center">
+        <div class="col-lg-6 caption-content">
+            <img class="img-fluid" src="img/photo.jpg" alt="">
+        </div> 
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h2>ABOUT ME</h2>
@@ -76,7 +104,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Services -->
   <section class="content-section bg-primary text-white text-center" id="services">
@@ -101,7 +129,7 @@
                 <i class="fas fa-laptop-code"></i>
             </span>
             <h4>
-              <strong>JavaScript, HTML</strong>
+              <strong>HTML</strong>
             </h4>
             <p class="text-faded mb-0">개발 꿈나무</p>
           </div>
@@ -122,24 +150,13 @@
           <h4>
             <strong>BEST DRIVER</strong>
           </h4>
-          <p class="text-faded mb-0">운전면허 보유 (1종 보통)
-            <i class="fas fa-heart"></i>
-            무사고 경력 10년</p>
+          <p class="text-faded mb-0">운전면허 보유 (1종 보통)</p>
+        <p> 무사고 경력 10년</p>
         </div>
       </div>
     </div>
   </section>
-
-  <section class="callout">
-    <div class="container text-center">
-      <h2 class="mx-auto mb-5">Welcome to
-        <em>your</em>
-        next website!</h2>
-      <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/themes/stylish-portfolio/">Download Now!</a>
-    </div>
-  </section>
-
-  <!-- Portfolio -->
+<!-- project -->
   <section class="content-section" id="portfolio">
     <div class="container">
       <div class="content-section-heading text-center">
@@ -148,11 +165,11 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://github.com/gmae199boy/2020_jeju_hackathon">
+          <a class="portfolio-item" href="./project1.pdf">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">집피스</div>
-                <p class="mb-0">예비창업자를 위한 빈집활용 사무실 임대 플랫폼 </p>
+                <p class="mb-0">예비창업자를 위한 빈집활용 사무실 임대 플랫폼</p>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -169,28 +186,6 @@
             <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
           </a>
         </div>
-        <!-- <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">Strawberries</div>
-                <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
-          </a>
-        </div> -->
-        <!-- <div class="col-lg-6">
-          <a class="portfolio-item" href="#!">
-            <div class="caption">
-              <div class="caption-content">
-                <div class="h2">Workspace</div>
-                <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
-          </a>
-        </div> -->
       </div>
     </div>
   </section>
@@ -224,7 +219,7 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2020</p>
+      <p class="text-muted small mb-0">githubpage &copy; Soojin-Portfolio 2020</p>
     </div>
   </footer>
 
