--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="col-lg-6 col-md-12  my-5">
                 <h3>이수진 </h3>
-                <p>1991.11.21 여 010-2970-6138</p>
+                <p>1991.11.21 / 여 / sj44mw44@gmail.com</p>
                 <p>- 2020 제주 블록체인 해커톤 본상 수상</p>
                 <p>- 2020.05 - 2020.11 한국표준협회 블록체인 교육연구원</p> 
                 <p>  블록체인 비즈니스 청년혁신가 양성 과정 수료</p>
@@ -84,27 +84,12 @@
                     유연한 커뮤니케이션 능력으로 사람들과 소통하며 문제를 도출하고 해결하는 기획자가 될 것입니다.
                 </p>
                 <div class="container text-center">
-                    <a href="./resume.pdf" class="btn btn-xl btn-light mr-4">RESUME</a>
-                    <a href="https://github.com/soo1121" class="btn btn-xl btn-dark">GITHUB</a>
+                    <a href="./pdf/resume.pdf" class="btn btn-xl btn-dark">RESUME</a>
                 </div>
             </div> 
          </div>
     </div>
 </section>
-  <!-- <section class="content-section bg-light" id="about">
-    <div class="container text-center">
-        <div class="col-lg-6 caption-content">
-            <img class="img-fluid" src="img/photo.jpg" alt="">
-        </div> 
-      <div class="row">
-        <div class="col-lg-10 mx-auto">
-          <h2>ABOUT ME</h2>
-          <p class="lead mb-5"> 중국학과을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에도 적응하고 성장했습니다. </p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What I Do</a>
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <!-- Services -->
   <section class="content-section bg-primary text-white text-center" id="services">
@@ -165,7 +150,7 @@
       </div>
       <div class="row no-gutters">
         <div class="col-lg-6">
-          <a class="portfolio-item" href="./project1.pdf">
+          <a class="portfolio-item" href="./pdf/project1.pdf">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">집피스</div>
@@ -191,13 +176,13 @@
   </section>
 
   <!-- Call to Action -->
-  <section class="content-section bg-primary text-white">
+  <!-- <section class="content-section bg-primary text-white">
     <div class="container text-center">
       <h2 class="mb-4">The buttons below are impossible to resist...</h2>
       <a href="./resume.pdf" class="btn btn-xl btn-light mr-4">이력서보기</a>
       <a href="https://github.com/soo1121" class="btn btn-xl btn-dark">GITHUB</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer class="footer text-center">
