--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <a class="js-scroll-trigger" href="#services">What I Do</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
+        <a class="js-scroll-trigger" href="#portfolio">Projects</a>
       </li>
-      <li class="sidebar-nav-item">
+      <!-- <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#contact">Contect Me</a>
-      </li>
+      </li> -->
     </ul>
   </nav>
 
@@ -59,19 +59,25 @@
       <h3 class="mb-5">
         <em> 함께 하고 싶은 사람, 소통하는 기획자 이수진입니다</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> Find Out More</a>
     </div>
     <div class="overlay"></div>
   </header>
 
   <!-- About -->
   <section class="about">
-    <div class="container">    
-            <div class="col-md-12 my-5 col-xs-12">
-                <h2>ABOUT ME</h2>
+    <div id ="about">    
+            <div class="content-section-heading text-center">
+              <h2>ABOUT ME</h2>
             </div>
+      
         <div class="row">
-            <div class="col-lg-6 col-md-12 my-5 mb-3">
+            <div class="col-lg-6 col-md-12 my-5">
+            &nbsp; &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            &nbsp;
                 <img src="img/photo.jpg " width="350px" class="bg-primary"/>
             </div>
             <div class="col-lg-6 col-md-12  my-5">
@@ -80,10 +86,9 @@
                 <p>- 2020 제주 블록체인 해커톤 본상 수상</p>
                 <p>- 2020.05 - 2020.11 한국표준협회 블록체인 교육연구원</p> 
                 <p>  블록체인 비즈니스 청년혁신가 양성 과정 수료</p>
-                <p>  중국학을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에 도전하고 적응하며 성장했습니다.
-                    유연한 커뮤니케이션 능력으로 사람들과 소통하며 문제를 도출하고 해결하는 기획자가 될 것입니다.
-                </p>
-                <div class="container text-center">
+                <p>  중국학을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에 도전하고 적응하며 성장했습니다.</p>
+                <p>유연한 커뮤니케이션 능력으로 사람들과 소통하며 문제를 도출하고 해결하는 기획자가 될 것입니다.</p>
+                <div class="container">
                     <a href="./pdf/resume.pdf" class="btn btn-xl btn-dark">RESUME</a>
                 </div>
             </div> 
@@ -194,8 +199,8 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="icon-social-twitter"></i>
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.youtube.com/channel/UCLt-vw5HCPiFhJBw5FwcR_Q/">
+            <i class="icon-social-youtube"></i>
           </a>
         </li>
         <li class="list-inline-item">
