--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="https://github.com/gmae199boy/jelly_project">
+          <a class="portfolio-item" href="https://www.notion.so/jellyproject/8b661a9b7e4e47169f86114629864fb9">
             <div class="caption">
               <div class="caption-content">
                 <div class="h2">Jelly</div>
@@ -194,18 +194,18 @@
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#!">
-            <i class="far fa-envelope"></i>
-          </a>
-        </li>
-        <li class="list-inline-item">
           <a class="social-link rounded-circle text-white mr-3" href="https://www.youtube.com/channel/UCLt-vw5HCPiFhJBw5FwcR_Q/">
             <i class="icon-social-youtube"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white" href="https://github.com/soo1121">
+          <a class="social-link rounded-circle text-white mr-3" href="https://github.com/soo1121">
             <i class="icon-social-github"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="social-link rounded-circle text-white mr-3" href="www.google.com">
+            <i class="icon-social-google"></i>
           </a>
         </li>
       </ul>
