--- a/index.html
+++ b/index.html
@@ -68,25 +68,26 @@
   <section class="about">
     <div id ="about">    
             <div class="content-section-heading text-center">
+              &nbsp;
               <h2>ABOUT ME</h2>
             </div>
       
         <div class="row">
             <div class="col-lg-6 col-md-12 my-5">
-            &nbsp; &nbsp;
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             &nbsp;
             &nbsp;
-            &nbsp;
-            &nbsp;
+            &nbsp; &nbsp; &nbsp; &nbsp;
                 <img src="img/photo.jpg " width="350px" class="bg-primary"/>
             </div>
             <div class="col-lg-6 col-md-12  my-5">
                 <h3>이수진 </h3>
                 <p>1991.11.21 / 여 / sj44mw44@gmail.com</p>
-                <p>- 2020 제주 블록체인 해커톤 본상 수상</p>
-                <p>- 2020.05 - 2020.11 한국표준협회 블록체인 교육연구원</p> 
-                <p>  블록체인 비즈니스 청년혁신가 양성 과정 수료</p>
-                <p>  중국학을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에 도전하고 적응하며 성장했습니다.</p>
+                <p>- 2020 제주 블록체인 해커톤 본상 수상 <a href="./pdf/resume.pdf" > <i class="fas fa-crown"></i></a> </p>
+                <p>- 2020.05 - 2020.11 한국표준협회 블록체인 교육연구원 </p> 
+                <p>(블록체인 비즈니스 청년혁신가 양성 과정 수료)</p>
+                <p> 중국학을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 </p>
+                <p> 블록체인 분야에 도전하여 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운 분야에도 잘 적응하며 성장했습니다.</p>
                 <p>유연한 커뮤니케이션 능력으로 사람들과 소통하며 문제를 도출하고 해결하는 기획자가 될 것입니다.</p>
                 <div class="container">
                     <a href="./pdf/resume.pdf" class="btn btn-xl btn-dark">RESUME</a>
