--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="col-lg-6 col-md-12  my-5">
                 <h3>이수진 </h3>
                 <p>1991.11.21 / 여 / sj44mw44@gmail.com</p>
-                <p>- 2020 제주 블록체인 해커톤 본상 수상</p>
+                <p>- 2020 제주 블록체인 해커톤 본상 수상 <a href="./img/crown.jpg"> <i class="fas fa-crown"></i></a> </p>
                 <p>- 2020.05 - 2020.11 한국표준협회 블록체인 교육연구원</p> 
                 <p>  블록체인 비즈니스 청년혁신가 양성 과정 수료</p>
                 <p>  중국학을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에 도전하고 적응하며 성장했습니다.</p>
@@ -209,7 +209,7 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">githubpage &copy; Soojin-Portfolio 2020</p>
+      <p class="text-muted small mb-0">Copyright &copy; Soojin-Portfolio 2020</p>
     </div>
   </footer>
 
