--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p>  중국학을 전공하고 인천공항에서 공항안내 업무를 하며 사람들을 만나며 일을 하였고 블록체인 분야에 뛰어들어 프론트 구현 및 프로젝트 기획에 힘쓰며 새로운분야에 도전하고 적응하며 성장했습니다.</p>
                 <p>유연한 커뮤니케이션 능력으로 사람들과 소통하며 문제를 도출하고 해결하는 기획자가 될 것입니다.</p>
                 <div class="container">
-                    <a href="./pdf/resume.pdf" class="btn btn-xl btn-dark">RESUME</a>
+                    <a href="./pdf/onepage.pdf" class="btn btn-xl btn-dark">RESUME</a>
                 </div>
             </div> 
          </div>
@@ -204,7 +204,7 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="www.google.com">
+          <a class="social-link rounded-circle text-white mr-3" href="https://www.google.com">
             <i class="icon-social-google"></i>
           </a>
         </li>
